[package]
name = "signal-notify"
version = "0.1.3"
authors = ["Naomichi Agata <agatan039@gmail.com>"]
description = "Catch OS signals with standard mpsc channel"
license-file = "LICENSE"
homepage = "https://github.com/agatan/signal-notify"
repository = "https://github.com/agatan/signal-notify"
keywords = ["os", "signal", "channel"]

[dependencies]
libc = "0.2"
lazy_static = "1.0"

